--- a/12_OOP/task1.html
+++ b/12_OOP/task1.html
@@ -5,8 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<div id="raz10"><input type="button" value="Нажать"></div>
-
-<script src="1.js"></script>
+    <script src="task1_classes.js"></script>
 </body>
 </html>
