--- a/appendChild_removeChild/remove.html
+++ b/appendChild_removeChild/remove.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<button onclick="this.parentNode.removeChild(this);">Вариант 1</button>
+<button onclick="this.remove();">Вариант 2</button>
+<button onclick="this.outerHTML='';">Вариант 3</button>
 </body>
 </html>
